# twitter-scraps-manager

./: Cargo.toml  backup.sh
backup/: public.sql  tweets.csv
src/: handlers.rs  index.html  main.rs  scripts.js  styles.css
static/: index.html  scripts.js  styles.css
